--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.4.0",
+    "@tsparticles/react": "^3.0.0",
     "bootstrap": "^5.3.2",
     "install": "^0.13.0",
     "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.21.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "tsparticles": "^3.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -29,6 +33,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
